tests/negative/runtime/exec_empty_command/input.ci
void main() {
    ExecResult r = exec([], []);
    print(toString(execStatus(r)) + "\n");
}
